update: backend final
fix: swagger
fix: database to implement test
fix: routes
fix: minor controller fixes
feat: new jest tests
feat: validators for login and register
feat: pagination for enterprises and messages
