# lumina_ts-main/dist/config/swagger.yaml
@@ -386,21 +386,69 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  auth/empresas/checkauth:
+  /api/v1/auth/enterprises:
     get:
-      summary: Verificar autenticação da empresa
-      description: Verifica se o token de autenticação fornecido é válido.
+      summary: Listar empresas
+      description: Retorna uma lista de empresas filtradas por tipo e paginadas.
       tags:
         - Empresas
+      parameters:
+        - in: query
+          name: page
+          description: Número da página a ser retornada.
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - in: query
+          name: limit
+          description: Número máximo de empresas por página.
+          required: false
+          schema:
+            type: integer
+            default: 10
+        - in: query
+          name: tipo
+          description: Filtro para o tipo de empresa. Pode ser "contratante", "fornecedor" ou "ambos".
+          required: false
+          schema:
+            type: string
+            enum:
+              - contratante
+              - fornecedor
+              - ambos
       responses:
         200:
-          description: Token válido
+          description: Lista de empresas com paginação
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CheckAuthResponse'
-        401:
-          description: Token inválido
+                type: object
+                properties:
+                  page:
+                    type: integer
+                    description: Página atual
+                    example: 1
+                  totalPages:
+                    type: integer
+                    description: Número total de páginas
+                    example: 3
+                  totalEmpresas:
+                    type: integer
+                    description: Número total de empresas
+                    example: 30
+                  empresas:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Empresa'
+        400:
+          description: Parâmetros de consulta inválidos
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        500:
+          description: Erro ao listar empresas
           content:
             application/json:
               schema:
